# DirectoryOpus-CSV-viewer-plugin

./: CMakeLists.txt  CMakeSettings.json  README.md  build.ps1  vcpkg.json
.github/workflows/: main.yaml
src/DirectoryOpus-CSV-viewer-plugin/: Configuration.h  ConfigurationDialog.h  CsvViewerControl.h  PrecompiledHeader.h  UniversalCsvParser.h  main.cpp  resource.h  resource.rc
src/DirectoryOpus-CSV-viewer-plugin/Utils/: Clipboard.h  Exception.h  FileUtils.h  Logger.h  MethodTracer.h  StringUtils.h
src/TestFiles/: quoted string.csv  single_row.csv  utf-16BE_with_header.csv  utf-16LE_with_header.csv  utf-8BOM_with_header.csv  utf-8_caret_separated.csv  utf-8_no_header.csv  utf-8_pipe_separated.csv  utf-8_tab_separated.csv  utf-8_with_header.csv
vcpkg/overlay_triplets/: x64-windows-static.cmake
